# JDP

./: CMakeLists.txt  LICENSE.txt  README.md
include/: app.h  widgets.h
src/: app.cpp  main.cpp  widgets.cpp
